<resources>
    <string name="app_name">Logger</string>

    //Login Screen Texts
    <string name="log_in_screen_welcome">Welcome,</string>
    <string name="log_in_screen_below_welcome">Sign in to Continue !</string>
    <string name="log_in_screen_forgot_password">Forgot Password?</string>
    <string name="log_in_screen_login_button_text">Login</string>
    <string name="log_in_screen_google_sign_in">Login with Google</string>
    <string name="log_in_screen_new_user_base">New User?</string>
    <string name="log_in_screen_new_user_sign_up_text">Sign Up</string>
    <string name="log_in_screen_edit_text_email_hint">Email Address</string>
    <string name="log_in_screen_edit_text_passoward_hint">Passoward</string>

    //SignUp Screen Texts
    <string name="sign_up_screen_create_acc">Create Account,</string>
    <string name="sign_up_screen_below_create_acc">Sign up to get started !</string>
    <string name="sign_up_screen_email_hint">Email Address</string>
    <string name="sign_up_screen_password_hint">Passward</string>
    <string name="sign_up_screen_confirm__password_hint">Confirm Passward</string>
    <string name="sign_up_screen_sign_up_button_text">Sign up</string>
    <string name="sign_up_screen_google_sign_in_text">Sign up with Google</string>


    //Reset Screen Texts
    <string name="reset_password_screen_reset_password_header">Reset Password</string>
    <string name="reset_password_screen_below_reset_password_header_one">Enter the email associated with your</string>
    <string name="reset_password_screen_below_reset_password_header_two">account and we will send an email </string>
    <string name="reset_password_screen_below_reset_password_header_three">withe new password</string>
    <string name="reset_password_screen_edit_text_hint">Email Address</string>
    <string name="reset_password_screen_send_email_button_text">Send Email</string>


    <string name="dialog_delete_item_header">Delete The Item</string>
    <string name="dialog_delete_item_body_one">Are sure you want to delete the item</string>
    <string name="dialog_delete_item_body_two">This can be undone</string>
    <string name="dialog_delete_item_body_yes_button_text">Yes</string>
    <string name="dialog_delete_item_body_no_button_text">No</string>

    <string name="dialog_email_sent_header">Email Sent</string>
    <string name="dialog_email_sent_body_one">We have sent you a email with a new</string>
    <string name="dialog_email_sent_body_two">password,please wait few minutes</string>
    <string name="dialog_email_sent_body_three">and then check your email</string>
    <string name="dialog_email_sent_body_mul">We have sent you a email with a new password,please wait few minutes and then check your email</string>
    <string name="dialog_email_sent_ok_button_text">OK</string>

    <string name="dialog_no_wifi_header">Unknown Network Error!</string>
    <string name="dialog_no_wifi_body_one">We have detected a unknown Network Error </string>
    <string name="dialog_no_wifi_body_two">Please Check your internet</string>
    <string name="dialog_no_wifi_body_three">connection</string>
    <string name="dialog_no_wifi_body_mul">We have detected a unknown Network Error , Please Check your internet connection</string>
    <string name="dialog_no_wifi_button_ok">OK</string>


    <string name="dialog_unknown_error_header">Unknown Error</string>
    <string name="dialog_unknown_error_body_one">We have encountered a unknown error</string>
    <string name="dialog_unknown_error_body_two"> The Following Text might help you to understand</string>
    <string name="dialog_unknown_error_body_three"> the problem.</string>
    <string name="dialog_unknown_error_body_mul"> We have encountered a unknown error </string>
    <string name="dialog_unknown_error_body_dummy_text">Account already exists</string>
    <string name="dialog_unknown_error_please_restart_the_operation">Please Restart The operation</string>
    <string name="dialog_unknown_error_please_try_again">And Try Again !</string>


    <string name="TextWatcher_valid_email">Enter a valid Email Address</string>
    <string name="TextWatcher_valid_pass">Password Must Have 8 Characters</string>
    <string name="TextWatcher_username_">UserName  should be more than 5 Characters</string>
    <string name="TextWatcher_pass_dont_match">Passwords Do not Match</string>


    <string name="share_lint_text"><u>Click here to share link</u></string>

    <string name="checkongithub"><a href="https://github.com/i-am-beginnner34/Logger">Checkout the project on Github</a></string>





    <string name="no_Internet_Detection">No Internet Connection Detected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>