<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_gradient_bg_for_activites"
   >


    <include
        android:id="@+id/reset_pass_toolbar"
        layout="@layout/toolar_transparent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reset_pass_header"
        style="@style/Header_Text_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_pass_toolbar"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/reset_password_screen_reset_password_header" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reset_pass_sub_one"
        style="@style/Subtitle_For_Header_Text_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_pass_header"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="4dp"
        android:text="@string/reset_password_screen_below_reset_password_header_one" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reset_pass_sub_two"
        style="@style/Subtitle_For_Header_Text_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_pass_sub_one"
        android:layout_marginStart="40dp"
        android:text="@string/reset_password_screen_below_reset_password_header_two" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reset_pass_sub_three"
        style="@style/Subtitle_For_Header_Text_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_pass_sub_two"
        android:layout_marginStart="40dp"
        android:text="@string/reset_password_screen_below_reset_password_header_three" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_pass_email_edittext_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_pass_sub_three"
        android:layout_marginTop="20dp"
        android:hint="@string/reset_password_screen_edit_text_hint">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reset_pass_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_email_button"
        style="@style/main_gradient_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_pass_email_edittext_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@xml/button_background_for_gradient_button"
        android:text="@string/reset_password_screen_send_email_button_text" />

    <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress_bar_reset_pass"
        style="@style/SpinKitView.Wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_pass_email_edittext_layout"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:elevation="5dp"
        android:visibility="invisible"
        app:SpinKit_Color="@color/white" />

</RelativeLayout>