<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_gradient_bg_for_activites"
    tools:context=".SignUpActivity"
    >


    <include
        android:id="@+id/sign_up_toolbar"
        layout="@layout/toolar_transparent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sign_up_header"
        style="@style/Header_Text_Style"
        android:layout_width="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/sign_up_toolbar"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_screen_create_acc" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Subtitle_For_Header_Text_Style"
        android:id="@+id/sign_up_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_header"
        android:layout_marginStart="40dp"
        android:text="@string/sign_up_screen_below_create_acc" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_email_edittext_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:hint="@string/sign_up_screen_email_hint">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_passward_edittext_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_below="@id/signup_email_edittext_layout"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        android:hint="@string/sign_up_screen_password_hint">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_passward_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_confirm_passward_edittext_layout"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_below="@id/sign_up_passward_edittext_layout"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        android:hint="@string/sign_up_screen_confirm__password_hint">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_confirm_passward_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress_bar_signup"
        style="@style/SpinKitView.Wave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/sign_up_confirm_passward_edittext_layout"
        android:visibility="invisible"
        android:layout_marginRight="40dp"
        android:elevation="5dp"
        app:SpinKit_Color="@color/white" />





    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        style="@style/main_gradient_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_confirm_passward_edittext_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@xml/button_background_for_gradient_button"
        android:text="@string/sign_up_screen_sign_up_button_text" />


    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/signup_with_google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up_button"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/colorTransparent"
        app:cardElevation="0dp">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorTransparent">


            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/colorTransparent"
                android:src="@drawable/google_icon" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/google_sing_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/icon"
                android:backgroundTint="@color/colorTransparent"
                android:fontFamily="@font/bahnschrift"
                android:gravity="center_horizontal"
                android:text="@string/sign_up_screen_google_sign_in_text"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/grey_sub" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>